tests/valid/noSpreadingTuples.ts
// @ts-nocheck
const arr = [1, 2, 3];
const copy = Array.from(arr);
