tests/invalid/sizeMethod.ts
// @ts-nocheck
const arr = [1, 2, 3];
const len = arr.length;
